# hosts-switcher

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: publish.yml
src/: main.js  style.css
src-tauri/: Cargo.toml  check_out.txt  check_out_2.txt  check_out_3.txt  check_out_4.txt  tauri.conf.json
src-tauri/src/: cli.rs  hosts.rs  lib.rs  main.rs  storage.rs
