[package]
name = "hostly"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "hostly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hostly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hostly"
path = "src/main.rs"

[[bin]]
name = "hostly-core"
path = "src/bin/hostly-core.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
window-vibrancy = "0.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Reduce parallel build units for better optimization
panic = "abort"      # Remove stack unwinding code
strip = true         # Strip symbols from binary
